fix header spacing

--- a/src/Home.css
+++ b/src/Home.css
@@ -52,13 +52,10 @@
 }
 
 .App-header {
-
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -79,7 +76,6 @@
   url('./nebula.gif');
   background-position: cover;
   background-size:cover;
-
   background-repeat:repeat;
   margin-top: auto;
   margin-bottom: auto;
